# Framewise

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  DESIGN (LAYOUT CHANGES).md  DESIGN.md  Framewise Widgets.html  MANIFESTO.md  NOTES.md
framewise/: Cargo.toml
framewise/src/: builder.rs  draw.rs  focus.rs  input.rs  layout.rs  lib.rs  output.rs  test_utils.rs  text.rs  theme.rs  types.rs  widget.rs
framewise/src/layouts/: column.rs  linear.rs  manual.rs  mod.rs  offset.rs  row.rs  split_row.rs  wrap.rs
framewise/src/text/: backend.rs  caret.rs  cluster_layout.rs  glyph_emission.rs  layout.rs  mod.rs  placement.rs  shaped_text.rs  tests.rs  text_backend.rs  text_layout.rs  text_overflow.rs  text_placement.rs  text_tests.rs  text_types.rs  types.rs
framewise/src/widgets/: button.rs  checkbox.rs  chip.rs  color_swatch.rs  divider.rs  drag_number.rs  frame.rs  keycap.rs  label.rs  menu.rs  meter.rs  mod.rs  progress_bar.rs  radio.rs  scroll_area.rs  segmented.rs  select.rs  slider.rs  spinner.rs  status.rs  switch.rs  tabs.rs  test_helpers.rs  text_edit.rs  tooltip.rs  tree.rs  widget_helpers.rs  window.rs
framewise/src/widgets/button/: button.rs  button_tests.rs
framewise/src/widgets/checkbox/: checkbox.rs  checkbox_tests.rs
framewise/src/widgets/chip/: chip.rs  chip_tests.rs
framewise/src/widgets/color_swatch/: color_swatch.rs  color_swatch_tests.rs
framewise/src/widgets/divider/: divider.rs  divider_tests.rs
framewise/src/widgets/drag_number/: drag_number.rs  drag_number_tests.rs
framewise/src/widgets/frame/: frame.rs  frame_tests.rs
framewise/src/widgets/keycap/: keycap.rs  keycap_tests.rs
framewise/src/widgets/label/: label.rs  label_tests.rs
framewise/src/widgets/menu/: menu.rs  menu_tests.rs
framewise/src/widgets/meter/: meter.rs  meter_tests.rs
framewise/src/widgets/number_edit/: number_edit.rs  number_edit_tests.rs
framewise/src/widgets/progress_bar/: progress_bar.rs  progress_bar_tests.rs
framewise/src/widgets/radio/: radio.rs  radio_tests.rs
framewise/src/widgets/scroll_area/: scroll_area.rs  scroll_area_tests.rs
framewise/src/widgets/segmented/: segmented.rs  segmented_tests.rs
framewise/src/widgets/select/: select.rs  select_tests.rs
framewise/src/widgets/slider/: slider.rs  slider_tests.rs  slider_with_editor.rs
framewise/src/widgets/spinner/: spinner.rs  spinner_tests.rs
framewise/src/widgets/status/: status.rs  status_tests.rs
framewise/src/widgets/switch/: switch.rs  switch_tests.rs
framewise/src/widgets/tabs/: tabs.rs  tabs_tests.rs
framewise/src/widgets/text_edit/: text_edit.rs  text_edit_tests.rs
framewise/src/widgets/tooltip/: tooltip.rs  tooltip_tests.rs
framewise/src/widgets/tree/: tree.rs  tree_tests.rs
framewise/src/widgets/window/: window.rs  window_tests.rs
logo/: preview.html
mockups/: Framewise Widgets.html  widgets.css
sample/: Cargo.toml
sample/benches/: text_hot_path.rs
sample/src/: aa.wgsl  button_page.rs  demo_page.rs  frame_demo.rs  golden_tests.rs  label_page.rs  layout_demo.rs  lib.rs  main.rs  render_test_utils.rs  renderer.rs  scroll_demo.rs  shader.wgsl  spec_page.rs  text.rs  text.wgsl  text_edit_demo.rs
sample/src/text/: DESIGN.md  integration_tests.rs  mod.rs  rasterizer.rs  shaper.rs  tests.rs  text_backend.rs  text_system.rs  types.rs
