[package]
name = "framewise"
version = "0.1.0"
edition = "2021"
description = "A Rust GUI library where the app is always in control."

[features]
# Intrinsic-sizing migration: widgets are added back to the default set as each
# is moved to the new layout(params, intrinsic) signature. button, slider, and
# scroll_area are migrated; the rest stay out until updated.
default = ["button", "slider", "scroll_area", "frame", "label"]
button       = []
checkbox     = []
chip         = []
color_swatch = []
divider      = []
drag_number  = []
frame        = []
keycap       = []
label        = []
menu         = []
meter        = []
progress_bar = []
radio        = []
scroll_area  = ["slider"]
segmented    = []
select       = []
slider       = []
spinner      = []
status       = []
switch       = []
tabs         = []
text_edit    = []
tooltip      = []
tree         = []
window       = []

[dependencies]
