[package]
name = "framewise"
version = "0.1.0"
edition = "2021"
description = "A Rust GUI library where the app is always in control."

[features]
default = ["button", "slider", "scroll_area", "frame", "label", "keycap", "status", "tooltip", "checkbox", "radio", "switch", "color_swatch", "divider", "meter", "progress_bar", "spinner", "tree", "tabs", "chip", "drag_number", "segmented"]
button       = []
checkbox     = []
chip         = []
color_swatch = []
divider      = []
drag_number  = []
frame        = []
keycap       = []
label        = []
menu         = []
meter        = []
progress_bar = []
radio        = []
scroll_area  = ["slider"]
segmented    = []
select       = []
slider       = []
spinner      = []
status       = []
switch       = []
tabs         = []
text_edit    = []
tooltip      = []
tree         = []
window       = []

[dependencies]
