[package]
name = "framewise"
version = "0.1.0"
edition = "2021"
description = "A Rust GUI library where the app is always in control."

[features]
default = ["button", "slider", "scroll_area", "frame", "label", "keycap", "status", "tooltip", "checkbox", "radio", "switch", "color_swatch", "divider", "meter", "progress_bar", "spinner", "tree", "tabs", "chip", "number_edit", "segmented", "select", "menu", "window", "text_edit"]
button       = []
checkbox     = []
chip         = []
color_swatch = []
divider      = []
number_edit  = ["text_edit"]
frame        = []
keycap       = []
label        = []
menu         = []
meter        = []
progress_bar = []
radio        = []
scroll_area  = ["slider"]
segmented    = []
select       = []
slider       = ["label"]
spinner      = []
status       = []
switch       = []
tabs         = []
text_edit    = ["scroll_area"]
tooltip      = []
tree         = []
window       = []

[dependencies]
