[package]
name = "sample"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sample"
path = "src/main.rs"

[features]
# Phase 1 intrinsic-sizing work: only the button page builds against the
# button-only framewise. Restore the other pages as widgets are migrated.
default = ["page_button_demo", "page_scroll_demo", "page_frame_demo", "page_layout_demo", "page_spec", "page_label_demo"]

button       = ["framewise/button"]
checkbox     = ["framewise/checkbox"]
chip         = ["framewise/chip"]
color_swatch = ["framewise/color_swatch"]
divider      = ["framewise/divider"]
drag_number  = ["framewise/drag_number"]
frame        = ["framewise/frame"]
keycap       = ["framewise/keycap"]
label        = ["framewise/label"]
menu         = ["framewise/menu"]
meter        = ["framewise/meter"]
progress_bar = ["framewise/progress_bar"]
radio        = ["framewise/radio"]
scroll_area  = ["framewise/scroll_area"]
segmented    = ["framewise/segmented"]
select       = ["framewise/select"]
slider       = ["framewise/slider"]
spinner      = ["framewise/spinner"]
status       = ["framewise/status"]
switch       = ["framewise/switch"]
tabs         = ["framewise/tabs"]
text_edit    = ["framewise/text_edit"]
tooltip      = ["framewise/tooltip"]
tree         = ["framewise/tree"]
window       = ["framewise/window"]

page_button_demo = ["button", "label"]
page_scroll_demo = ["button", "scroll_area", "slider"]
page_frame_demo = ["button", "frame", "label"]
page_layout_demo = ["button", "label"]
page_label_demo = ["label"]
# The spec page renders incrementally: this "core" set enables the scaffolding
# (section headers, captions, hero, footer, page scroll). Each numbered section
# appears only when its widgets are also enabled — e.g. add "checkbox", "radio",
# "switch" for section 03, or the full set below to show every section.
#   01 Buttons ............ button
#   02 Text inputs ........ text_edit
#   03 Checks/radios/sw ... checkbox + radio + switch
#   04 Sliders & drags .... slider + drag_number + color_swatch
#   05 Selection .......... select + segmented + chip + menu
#   06 Scrollbars ......... (core: scroll_area)
#   07 Tabs ............... tabs
#   08 Progress/meters .... progress_bar + meter + spinner + status
#   09 Tree & list ........ tree
#   10 Tooltips/keycaps ... tooltip + keycap
#   11 Window chrome ...... window + drag_number + checkbox
#   12 In use ............. window + tabs + segmented + slider + switch +
#                           drag_number + color_swatch + checkbox + button + menu
page_spec = ["label", "divider", "scroll_area"]

# Convenience: enable the spec page with every section turned on. NOTE: this only
# builds once each listed widget has been migrated to the new layout(params,
# intrinsic) API in framewise. Today only button/slider/scroll_area/frame (plus the
# core label/divider) are migrated, so the buildable sections are 01 and 06; the
# rest light up as their widgets are migrated.
page_spec_full = [
    "page_spec",
    "button", "checkbox", "chip", "color_swatch", "drag_number",
    "keycap", "menu", "meter", "progress_bar", "radio",
    "segmented", "select", "slider", "spinner", "status",
    "switch", "tabs", "text_edit", "tooltip", "tree", "window",
]

[dependencies]
framewise = { path = "../framewise" }
winit      = "0.30"
wgpu       = "24"
pollster   = "0.4"
bytemuck   = { version = "1", features = ["derive"] }
log        = "0.4"
env_logger = "0.11"
fontdue    = "0.9.3"
arboard    = "3.4"
resvg      = "0.41.0"
usvg       = "0.41.0"
